# lme-rs

./: .JuliaFormatter.toml  .gitignore  AGENTS.md  BENCHMARKS.md  BENCHMARK_COVERAGE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  OPTIMIZATION.md  README.md  RELEASING.md  RELINKING.md  REPO_COMPLETION_BY_AREA.md  THIRD_PARTY_NOTICES.md  TODO.md  Taskfile.yml  USABILITY.md  cobertura.xml  completion_manifest.json  lcov.info  lefthook.yml  mise.toml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  crate-publish-dry-run.yml  fuzz-smoke.yml  python-release.yml  repo-metadata.yml
LICENSES/: Apache-2.0.txt  BSD-3-Clause-OpenBLAS.txt  Intel-Simplified-Software-License.txt  LGPL-2.1-only.txt
benches/: bench_load_production.rs  bench_math.rs
benchmarks/: fair-rust-julia-reference-2026-07-04.json  fair-rust-julia-reference-2026-07-06.json  fair-rust-julia-reference-2026-07-08.json  fair-rust-julia-reference-2026-07-09-direct-intercept-gram.json  fair-rust-julia-reference-2026-07-09-full-lmm.json  fair-rust-julia-reference-2026-07-09-glmm.json  fair-rust-julia-reference-2026-07-09-large-intercept-setup.json  fair-rust-julia-reference-2026-07-09-large-slopes-linear-cache.json  fair-rust-julia-reference-2026-07-09-large-slopes.json  fair-rust-julia-reference-2026-07-09-sleepstudy-slopes.json  fair-rust-julia-reference-2026-07-09.json  fair-rust-julia-reference-2026-07-10-cold-setup-followup.json  fair-rust-julia-reference-2026-07-16-cold-fit-lt1.json  fair-rust-julia-reference-2026-07-22-full-tier-a.json
comparisons/: COMPARISONS.md  bench_fair_julia_perf.jl  bench_fair_julia_timing.jl  bench_fair_rust_julia.rs  bench_perf_breakdown.rs  categorical_anova.R  categorical_anova.jl  categorical_anova.py  categorical_anova.rs  glmm_cbpp.R  glmm_cbpp.jl  glmm_cbpp.py  glmm_cbpp.rs  glmm_gaussian.R  glmm_gaussian.jl  glmm_gaussian.py  glmm_gaussian.rs  glmm_grouseticks.R  glmm_grouseticks.jl  glmm_grouseticks.rs  lmer_weighted.R  lmer_weighted.jl  lmer_weighted.py  lmer_weighted.rs  lmm_dyestuff.R  lmm_dyestuff.jl  lmm_dyestuff.py  lmm_pastes.R  lmm_pastes.jl  lmm_pastes.py  lmm_penicillin.jl  lmm_penicillin.py  lmm_penicillin.rs  nlmm_sspower.R  parity_export.rs  r_setup.R  sleepstudy.R  sleepstudy.jl  sleepstudy_ml.R  sleepstudy_ml.jl  (+2 more)
comparisons/parity/: glmm_offset.R  glmm_offset.jl  glmm_probit.R  glmm_probit.jl  glmm_weighted.R  glmm_weighted.jl  parity_r_setup.R  sleepstudy_offset.R  sleepstudy_offset.jl
docs/: CALO_CALIBRATION.md  index.html
docs/benchmarks/: app.js  index.html  styles.css
examples/: COMPARISONS.md  batch_sspower_cpu.rs  dump_cascade_fixtures.rs  glmm_cbpp.R  glmm_cbpp.jl  glmm_cbpp.py  glmm_cbpp.rs  glmm_grouseticks.R  glmm_grouseticks.jl  glmm_grouseticks.py  glmm_grouseticks.rs  lmm_dyestuff.jl  lmm_dyestuff.rs  lmm_pastes.R  lmm_pastes.jl  lmm_pastes.rs  lmm_penicillin.R  lmm_penicillin.jl  lmm_penicillin.rs  nlmm_fixture_dump.rs  sleepstudy.R  sleepstudy.jl  sleepstudy.py  sleepstudy.rs  sleepstudy_ml.jl  sleepstudy_ml.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/formula_parse/: 001_sleepstudy  002_nested  003_crossed  004_offset  005_double_bar  006_binary_noise  006_garbage_parens  malformed_unreachable_regression
fuzz/fuzz_targets/: formula_parse.rs  formula_pipeline.rs
legal/: dependency-license-exceptions.json  fixture-provenance.json
python/: Cargo.toml  PYTHON_GUIDE.md  lme_python.pyi  pyproject.toml  requirements-ci.txt
python/examples/: glmer_cbpp.py  glmer_grouseticks.py  lm_basics.py  lmer_sleepstudy.py  model_comparison.py
python/examples/plotting_demo/: .gitignore  README.md  compare_plots.py  figure_specs.py  find_rscript.py  numeric_overlay.py  paths.py  plot_demo.py  plot_r.R  run_all.py
python/examples/verification_project/: README.md  conftest.py  parity.py  paths.py  run.py  test_parity.py
python/src/: lib.rs
python/tests/: test_api_parity.py  test_basic.py  test_cv.py  test_dataframe_inputs.py  test_golden_parity.py  test_nlmer_custom_mean.py  test_simulate_scale.py  test_wheel_notices.py
scripts/: build_benchmark_site.py  dump_dyestuff.R  dump_pastes.R  local_ci.ps1  local_ci.sh  make_penicillin_csv.py  plot_comparisons.py  run_cross_language_benchmarks.py  run_fair_rust_julia_benchmark.py  run_perf_breakdown.py  sync_github_repo_metadata.py  verify_cross_language_parity.py
scripts/ast_explorations/: test_fiasto.rs  test_fiasto_offset.rs
scripts/ci/: README.md  check_completion_score.py  check_legal_compliance.py  julia_format.jl  lme_ci.py  package_wheel_notices.py  r_format.R  run.sh
src/: anova.rs  anova_contrasts.rs  bootstrap.rs  contrast.rs  cv.rs  ddf.rs  family.rs  formula.rs  glmm_math.rs  intercept_blocked.rs  kenward_roger.rs  kr_modcomp.rs  kr_vcov_adj.rs  lib.rs  main.rs  math.rs  model_matrix.rs  optimizer.rs  perf_diag.rs  profile_ci.rs  quadrature.rs  robust.rs  satterthwaite.rs  simulate.rs
src/nlmm/: fit.rs  formula.rs  mean.rs  mean_fn.rs  mod.rs  predict.rs  re_cov.rs  self_start.rs  ssasymp.rs  ssasympoff.rs  ssasymporig.rs  ssfpl.rs  (+6 more)
tests/: categorical_anova_test.rs  gen_nlmm_extras.R  generate_mock_data.py  generate_nlmm_fixtures.R  generate_test_data.R  test_anova.rs  test_anova_types.rs  test_bootstrap.rs  test_conditional_real.rs  test_confint_profile.rs  test_confint_simulate.rs  test_contrast.rs  test_coverage_edge_cases.rs  test_coverage_gaps.rs  test_crossed_mock.rs  test_cv.rs  test_e2e_lmer.rs  test_edge_cases.rs  test_errors.rs  test_failure_modes.rs  test_formula.rs  test_formula_stress.rs  test_gaps.rs  test_glmm.rs  test_glmm_links.rs  test_glmm_offset_grouseticks.rs  test_glmm_weighted.rs  test_golden_parity.rs  test_intercept_only.rs  test_kenward_roger.rs  test_kr_modcomp_pastes.rs  test_ml_optimization.rs  test_nlmm_agq.rs  test_nlmm_bounds.rs  test_nlmm_custom_mean.rs  test_nlmm_orange.rs  test_nlmm_orange_multi_re.rs  test_nlmm_self_start.rs  test_nlmm_ss_new_means.rs  test_nlmm_ssasymp.rs  (+13 more)
(+44 files in other folders)
