[package]
name = "lme-rs"
version = "0.1.0"
edition = "2024"
authors = ["Dein Name <deine@email.com>"]
description = "Rust port of R's lme4: linear mixed-effects models with 1:1 numerical compatibility"

[dependencies]
polars = { version = "0.45.1", features = ["lazy", "csv", "object"] }
ndarray = "0.16"
ndarray-linalg = { version = "0.17", features = ["intel-mkl-static"] }
statrs = "0.18"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
argmin = "0.11.0"
fiasto = "0.2.7"
