[package]
name = "lme-rs"
version = "0.1.3"
edition = "2021"
authors = ["Martin Huck <x4g4p3x@users.noreply.github.com>"]
description = "Rust port of R's lme4: linear mixed-effects models with 1:1 numerical compatibility"
license = "MIT"
repository = "https://github.com/x4g4p3x/lme-rs"
homepage = "https://docs.rs/lme-rs/latest/lme_rs/"
readme = "README.md"
keywords = ["statistics", "lme4", "mixed-effects", "glmm", "regression"]
categories = ["science", "mathematics"]

[dependencies]
polars = { version = "0.46.0", features = ["lazy", "csv", "object"] }
ndarray = "0.16"

statrs = "0.18"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
argmin = "0.11.0"
argmin-math = { version = "0.5.1", features = ["ndarray_v0_16-nolinalg"] }
fiasto = "0.2.7"
sprs = "0.11.4"
sprs-ldl = "0.10.0"
log = "0.4"
rand = "0.9"
rand_distr = "0.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
env_logger = "0.11.9"

[profile.bench]
debug = true

[[bench]]
name = "bench_math"
harness = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
ndarray-linalg = { version = "0.17", features = ["intel-mkl-static"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
ndarray-linalg = { version = "0.17", features = ["openblas-static"] }
