[package]
name = "lme_python"
version = "0.1.2"
edition = "2021"
authors = ["Martin Huck <x4g4p3x@users.noreply.github.com>"]
description = "Python bindings for lme-rs"

[lib]
name = "lme_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
polars = { version = "0.46.0", features = ["lazy", "csv", "ipc"] }
lme-rs = { path = ".." }
