[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "lme_python"
description = "Rust port of R's lme4: linear mixed-effects models"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.8,<2.0",
    "pytest>=7.0",
    "pip-audit>=2.6",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["."]
exclude = [".venv", "target", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Optional demo scripts: long print strings and PIL crop tuple names.
"python/examples/plotting_demo/**" = ["E501", "E741"]
